fdo#39236: Prevent double-deletes during removal of pivot tables.

In short, don't use erase remove(_if) idiom to remove objects from
boost ptr containers which would cause double deletes because of
the way remove-like algorithms work.  STL's remove-like algorithms
create duplicates of the elements instead of re-ordering them by
design, and this obviously doesn't work well with containers
containing pointers.

IMPORTANT: this will get a better incremental fix

Signed-off-by: David Tardon <dtardon@redhat.com>
Signed-off-by: Petr Mladek <pmladek@suse.cz>
Signed-off-by: Michael Meeks <michael.meeks@novell.com>
Signed-off-by: Markus Mohrhard <markus.mohrhard@googlemail.com>